@@ -9,6 +9,7 @@ plugins {
   id 'org.owasp.dependencycheck' version '6.5.3'
   id 'com.github.ben-manes.versions' version '0.42.0'
   id 'org.sonarqube' version '3.3'
+  id 'com.github.spacialcircumstances.gradle-cucumber-reporting' version '0.1.23'
 }
 
 group = 'uk.gov.hmcts.reform'
@@ -16,6 +17,14 @@ version = '0.0.1'
 
 ext {
   set('springCloudVersion', "2021.0.2")
+}
+
+configurations {
+  functionalTestImplementation.extendsFrom testImplementation
+  functionalTestRuntimeOnly.extendsFrom runtimeOnly
+
+  integrationTestImplementation.extendsFrom testImplementation
+  integrationTestRuntimeOnly.extendsFrom runtimeOnly
 }
 
 java {
@@ -26,7 +35,12 @@ java {
 
 def versions = [
         springBoot      : springBoot.class.package.implementationVersion,
-        testcontainers  : '1.15.2'
+        testcontainers  : '1.15.2',
+        lombok          : '1.18.24',
+        junit           : '5.8.2',
+        junitPlatform   : '1.7.2',
+        serviceAuthVersion: '4.0.3',
+        idamClientVersion : '2.0.1'
 ]
 
 ext.libraries = [
@@ -57,25 +71,16 @@ sourceSets {
     }
     resources.srcDir file('src/integrationTest/resources')
   }
-
-  idea {
-    module {
-      // config to allow Intellij to mark test source and resource files correctly to help linting tools
-      testSourceDirs += project.sourceSets.functionalTest.java.srcDirs
-      testSourceDirs += project.sourceSets.integrationTest.java.srcDirs
-      testResourceDirs += project.sourceSets.functionalTest.resources.srcDirs
-      testResourceDirs += project.sourceSets.integrationTest.resources.srcDirs
-    }
-  }
 }
 
-configurations {
-  functionalTestImplementation.extendsFrom testImplementation
-  functionalTestRuntimeOnly.extendsFrom runtimeOnly
-
-  integrationTestImplementation.extendsFrom testImplementation
-  integrationTestRuntimeOnly.extendsFrom runtimeOnly
-
+idea {
+  module {
+    // config to allow Intellij to mark test source and resource files correctly to help linting tools
+    testSourceDirs += project.sourceSets.functionalTest.java.srcDirs
+    testSourceDirs += project.sourceSets.integrationTest.java.srcDirs
+    testResourceDirs += project.sourceSets.functionalTest.resources.srcDirs
+    testResourceDirs += project.sourceSets.integrationTest.resources.srcDirs
+  }
 }
 
 tasks.withType(JavaCompile) {
@@ -96,14 +101,81 @@ tasks.withType(Test) {
 }
 
 test {
+  generateCucumberReports.enabled = false
   failFast = true
 }
 
-task functional(type: Test) {
+task smoke(type: JavaExec) {
+  description = "Runs smoke tests"
+  group = "Verification"
+
+  new File("$buildDir/test-results/test").mkdirs()
+  copy {
+    from "src/functional/resources/DummyTest.xml"
+    into "$buildDir/test-results/test"
+  }
+
+  generateCucumberReports.enabled = false
+  main = "uk.gov.hmcts.reform.translate.TranslationServiceBeftaMain"
+  classpath += sourceSets.functionalTest.runtimeClasspath + sourceSets.main.output + sourceSets.test.output
+  args = [
+    '--strict',
+    '--threads', '10',
+    '--plugin', "json:${rootDir}/target/cucumber.json",
+    '--plugin', "junit:${buildDir}/test-results/functional/cucumber.xml",
+    '--tags', '@Smoke and not @Ignore',
+    '--glue', 'uk.gov.hmcts.befta.player', 'src/functionalTest/resources/features'
+  ]
+  // '--add-opens=...' added to suppress 'WARNING: An illegal reflective access operation has occurred' in uk.gov.hmcts.befta.util.CucumberStepAnnotationUtils
+  jvmArgs = [ '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED' ]
+
+  finalizedBy {
+    generateCucumberReports.enabled = true
+    generateCucumberReports {
+      doLast{
+        delete "${rootDir}/BEFTA Report for Smoke Tests/"
+        new File("${rootDir}/BEFTA Report for Smoke Tests").mkdirs()
+        file("${rootDir}/target/cucumber/cucumber-html-reports").renameTo(file("${rootDir}/BEFTA Report for Smoke Tests"))
+
+        logger.quiet("Smoke test report moved to ---> file://${rootDir}/BEFTA%20Report%20for%20Smoke%20Tests/overview-features.html")
+      }
+    }
+  }
+
+  outputs.upToDateWhen { false }
+}
+
+task functional(type: JavaExec) {
   description = "Runs functional tests"
   group = "Verification"
-  testClassesDirs = sourceSets.functionalTest.output.classesDirs
-  classpath = sourceSets.functionalTest.runtimeClasspath
+
+  generateCucumberReports.enabled = false
+  main = "uk.gov.hmcts.reform.translate.TranslationServiceBeftaMain"
+  classpath += sourceSets.functionalTest.runtimeClasspath + sourceSets.main.output + sourceSets.test.output
+  args = [
+    '--strict',
+    '--threads', '10',
+    '--plugin', "json:${rootDir}/target/cucumber.json",
+    '--plugin', "junit:${buildDir}/test-results/functional/cucumber.xml",
+    '--tags', 'not @Ignore',
+    '--glue', 'uk.gov.hmcts.befta.player', 'src/functionalTest/resources/features'
+  ]
+  // '--add-opens=...' added to suppress 'WARNING: An illegal reflective access operation has occurred' in uk.gov.hmcts.befta.util.CucumberStepAnnotationUtils
+  jvmArgs = [ '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED' ]
+
+  finalizedBy {
+    generateCucumberReports.enabled = true
+    generateCucumberReports {
+      doLast{
+        delete "${rootDir}/BEFTA Report for Functional Tests/"
+        new File("${rootDir}/BEFTA Report for Functional Tests").mkdirs()
+        file("${rootDir}/target/cucumber/cucumber-html-reports").renameTo(file("${rootDir}/BEFTA Report for Functional Tests"))
+        logger.quiet("Functional test report moved to ---> file://${rootDir}/BEFTA%20Report%20for%20Functional%20Tests/overview-features.html")
+      }
+    }
+  }
+
+  outputs.upToDateWhen { false }
 }
 
 task integration(type: Test) {
@@ -129,6 +201,19 @@ pmd {
   ruleSetFiles = files("config/pmd/ruleset.xml")
 }
 
+cucumberReports {
+  outputDir = file("${rootDir}/target/cucumber")
+  reports = files("${rootDir}/target/cucumber.json")
+}
+
+task customCleanBeftaReports(type:Delete) {
+  delete "${rootDir}/BEFTA Report for Smoke Tests/"
+  delete "${rootDir}/BEFTA Report for Functional Tests/"
+  delete "${rootDir}/target/cucumber"
+  delete "${rootDir}/target/cucumber.json"
+}
+tasks.clean.dependsOn(tasks.customCleanBeftaReports)
+
 jacocoTestReport {
   executionData(test, integration)
   reports {
@@ -147,9 +232,10 @@ dependencies {
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-json'
-  //implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
   implementation group: 'org.springframework.cloud', name: 'spring-cloud-config-server'
   implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-config'
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-cache'
 
   implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.6.7'
 
@@ -164,10 +250,40 @@ dependencies {
     exclude group: 'junit', module: 'junit'
     exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
   }
-  testImplementation group: 'com.github.hmcts', name: 'befta-fw', version: '8.7.1'
-  integrationTestImplementation group: 'org.testcontainers', name: 'postgresql', version: versions.testcontainers
+  implementation group: 'org.flywaydb', name: 'flyway-core', version: '7.7.0'
+  implementation group: 'org.postgresql', name: 'postgresql', version: '42.3.4'
+  implementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: versions.serviceAuthVersion
+  implementation group: 'com.github.hmcts', name: 'idam-java-client', version: versions.idamClientVersion
+  implementation group: 'org.springframework.security', name: 'spring-security-web'
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-client'
 
-  runtimeOnly 'org.postgresql:postgresql'
+  implementation group: 'org.springframework.security', name: 'spring-security-oauth2-jose'
+  implementation group: 'org.springframework.security', name: 'spring-security-config'
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-resource-server'
+
+  annotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
+  implementation group: 'org.projectlombok', name: 'lombok', version: versions.lombok
+
+
+  integrationTestImplementation sourceSets.main.runtimeClasspath
+  integrationTestImplementation sourceSets.test.runtimeClasspath
+  integrationTestImplementation group: 'org.testcontainers', name: 'postgresql', version: versions.testcontainers
+  integrationTestImplementation "com.github.ben-manes.caffeine:caffeine:2.7.0"
+  integrationTestImplementation group: 'com.github.tomakehurst', name: 'wiremock', version: '2.27.2'
+  integrationTestImplementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-contract-stub-runner', version: '3.1.0'
+  integrationTestImplementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
+  testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
+  integrationTestAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
+
+  functionalTestImplementation sourceSets.main.runtimeClasspath
+  functionalTestImplementation sourceSets.test.runtimeClasspath
+  functionalTestImplementation group: 'com.github.hmcts', name: 'befta-fw', version: '8.7.1'
+  functionalTestImplementation libraries.junit5
+
+  functionalTestImplementation group: 'commons-lang', name: 'commons-lang', version: '2.6'
+  functionalTestImplementation (group: 'com.github.hmcts', name: 'ccd-test-definitions', version: '7.17.0') {
+    exclude group: 'com.github.hmcts.befta-fw', module: 'befta-fw'
+  }
 }
 
 dependencyManagement {
@@ -184,6 +300,9 @@ sonarqube {
     property "sonar.projectName", "Reform :: ts-translation-service"
     property "sonar.projectKey", "uk.gov.hmcts.reform:ts-translation-service"
     property "sonar.coverage.jacoco.xmlReportPaths", "${jacocoTestReport.reports.xml.destination.path}"
+    property "sonar.exclusions",
+      "src/main/java/uk/gov/hmcts/reform/translate/Application.java," +
+      "src/main/java/uk/gov/hmcts/reform/translate/config/SecurityConfiguration.java"
   }
 }
 
@@ -248,6 +367,10 @@ bootJar {
 
 // Gradle 7.x issue, workaround from: https://github.com/gradle/gradle/issues/17236#issuecomment-894768083
 rootProject.tasks.named("processFunctionalTestResources") {
+  duplicatesStrategy = 'include'
+}
+
+rootProject.tasks.named("processIntegrationTestResources") {
   duplicatesStrategy = 'include'
 }
 
